Gradle configuration for tests

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.9.+'
+        classpath 'com.jakewharton.hugo:hugo-plugin:1.0.+'
+        classpath 'com.stanfy.spoon:spoon-gradle-plugin:0.9.6'
     }
 }
 
