--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,7 @@
+apply plugin: 'idea'
 apply plugin: 'android'
+apply plugin: 'spoon'
+apply plugin: 'hugo'
 
 
 // Manifest version information!
@@ -7,6 +10,8 @@ def versionMinor = 0
 def versionPatch = 0
 def versionBuild = 0 // bump for dogfood builds, public betas, etc.
 
+versionCode = versionMajor * 10000 + versionMinor * 1000 + versionPatch * 100 + versionBuild
+versionName = "${versionMajor}.${versionMinor}.${versionPatch}"
 
 def gitSha = 'git rev-parse --short HEAD'.execute([], project.rootDir).text.trim()
 def buildTime = new Date().format("yyyy-MM-dd'T'HH:mm'Z'", TimeZone.getTimeZone("UTC"))
@@ -52,29 +57,61 @@ android {
     }
 }
 dependencies {
+    compile 'com.android.support:support-v4:19.1.+'
 
     compile 'com.squareup.mortar:mortar:0.14'
     compile 'com.squareup.flow:flow:0.6'
-    compile 'com.netflix.rxjava:rxjava-core:0.16.1'
-    compile 'com.netflix.rxjava:rxjava-android:0.16.1'
-
-    compile 'com.android.support:support-v4:19.1.+'
-
-    compile 'com.squareup.dagger:dagger:1.2.1'
-    provided 'com.squareup.dagger:dagger-compiler:1.2.1'
-
     compile 'com.squareup.okhttp:okhttp:1.3.0'
     compile 'com.squareup.picasso:picasso:2.2.0'
     compile 'com.squareup.retrofit:retrofit:1.4.1'
-    debugCompile 'com.squareup.retrofit:retrofit-mock:1.4.1'
-
-    compile 'com.jakewharton:butterknife:4.0.1'
-    compile 'com.jakewharton.timber:timber:2.2.2'
-    debugCompile 'com.jakewharton.madge:madge:1.1.1'
-    debugCompile 'com.jakewharton.scalpel:scalpel:1.1.1'
 
     compile 'com.netflix.rxjava:rxjava-core:0.16.1'
     compile 'com.netflix.rxjava:rxjava-android:0.16.1'
 
+    compile 'com.squareup.dagger:dagger:1.2.1'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.1'
+    compile 'com.jakewharton:butterknife:4.0.1'
+    compile 'com.jakewharton.timber:timber:2.2.2'
+
     compile 'com.etsy.android.grid:library:1.0.3'
+
+    debugCompile 'com.squareup.retrofit:retrofit-mock:1.4.1'
+    debugCompile 'com.jakewharton.madge:madge:1.1.1'
+    debugCompile 'com.jakewharton.scalpel:scalpel:1.1.1'
+    debugCompile('com.jakewharton.espresso:espresso:1.1-r2') {
+        exclude group: 'com.squareup.dagger'
+    }
+
+    androidTestCompile 'com.squareup.spoon:spoon-client:1.1.1'
+}
+
+spoon {
+    debug = true
+    noAnimations = true
+
+    if (project.hasProperty('spoonClassName')) {
+        className = project.spoonClassName
+
+        if (project.hasProperty('spoonMethodName')) {
+            methodName = project.spoonMethodName
+        }
+    }
+
+    if (project.hasProperty('spoonTestSize')) {
+        testSize = project.spoonTestSize
+    }
+}
+
+idea {
+    module {
+        downloadJavadoc = true
+        downloadSources = true
+    }
+}
+
+android.applicationVariants.all { variant ->
+    def apk = variant.outputFile
+    def newName = "TravelBird-${variant.name}-v${project.versionName}.apk"
+
+    variant.outputFile = new File(apk.parentFile, newName)
 }
