--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,13 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:0.12.+'
+        classpath 'com.jakewharton.hugo:hugo-plugin:1.1.+'
+        classpath 'com.stanfy.spoon:spoon-gradle-plugin:0.10.+'
+    }
+}
 
 allprojects {
     repositories {
