--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,9 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.14.1'
+        classpath 'com.android.tools.build:gradle:1.2.3'
         classpath 'com.jakewharton.hugo:hugo-plugin:1.1.+'
-        classpath 'com.stanfy.spoon:spoon-gradle-plugin:0.10.+'
+        classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.0.3'
     }
 }
 
@@ -66,7 +66,6 @@ android {
 
     buildTypes {
         release {
-            runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
@@ -98,7 +97,7 @@ dependencies {
         exclude group: 'com.squareup.dagger'
     }
 
-    androidTestCompile 'com.squareup.spoon:spoon-client:1.1.1'
+    androidTestCompile 'com.squareup.spoon:spoon-client:1.1.10'
 }
 
 spoon {
@@ -126,8 +125,9 @@ idea {
 }
 
 android.applicationVariants.all { variant ->
-    def apk = variant.outputFile
-    def newName = "ll-mortar-${variant.name}-v${project.versionName}.apk"
-
-    variant.outputFile = new File(apk.parentFile, newName)
+    variant.outputs.each { output ->
+        def file = output.outputFile
+        def newName = "ll-mortar-${variant.name}-v${project.versionName}.apk"
+        output.outputFile = new File(file.parent, newName)
+    }
 }
